fixing alignment and noscript button image

--- a/flaskcoolname/site/static/index.css
+++ b/flaskcoolname/site/static/index.css
@@ -126,7 +126,7 @@ ul.sluglist > li:hover {
 }
 input[type=checkbox] {
     appearance: none;
-    margin: 0;
+    margin: 0 1em 0 0;
     padding: 0;
     height: 1.5em;
 }
